# OHWR_ADC_Tester

./: .gitignore  DataAnalyser.py  Data_source.py  Data_source.ui  Jenkinsfile  OHWR_ADC_Tester.py  README.md  adc_view.py  adc_view.ui  main.py  requirements.txt
cpp_src/: AdcBufferElements.h  AdcParse.cpp  AdcParse.h  AdcReadout.cpp  AdcReadout.h  CMakeLists.txt  CircularBuffer.h  Detector.h  Py_ADCData.cpp  Socket.cpp
testing/: simple_udp_server.py  test2_pkt1.txt  test2_pkt2.txt  test_pkt1.txt  test_pkt2.txt  test_pkt3.txt  test_pkt4.txt  test_pkt5.txt
